[tool.poetry]
name = "buenos-dias-bot"
version = "0.1.0"
description = ""
authors = ["Armando Sierra <armando.s.c@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^1.7.3"
boto3 = "^1.21.37"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
